src/app/globals.css
@import url("https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap");
@import "tailwindcss";

:root {
  --background: #1c1c1c;
  --foreground: #ffffff;
  --primary: #f15757;
  --secondary: #f88e12;
  --navbar-height: 92px;
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --color-primary: var(--primary);
  --color-secondary: var(--secondary);
  --spacing-desktop: var(--max-width);
  --spacing-navbar: var(--navbar-height);
}

@layer base {
  body {
    @apply bg-background text-foreground font-sans max-w-desktop;
    font-family: "Space Grotesk", sans-serif;
  }
  h2 {
    @apply leading-[62px] text-[56px] tracking-tight font-bold;
  }
  h3 {
    @apply leading-10 text-3xl font-bold tracking-[-1px];
  }
  span.section {
    @apply leading-[26px] text-lg font-medium text-primary uppercase;
  }
  p.section {
    @apply leading-7 text-xl font-normal tracking-[0.6px] text-foreground/60;
  }
}

@layer components {
  .header-link {
    @apply flex items-center gap-2.5 leading-[26px] text-[18px] font-medium;
  }
  .logo {
    @apply w-[144px];
  }
  .btn {
    @apply leading-6 w-fit font-medium text-[16px];
  }
  .btn.primary {
    @apply bg-primary rounded-full;
  }
  .btn.lg {
    @apply py-[18px] px-7;
  }
  .btn.md {
    @apply py-[18px] px-[22px];
  }
  .btn.sm {
    @apply py-3 px-7 text-[16px] leading-6;
  }
  .btn.outline {
    @apply bg-transparent w-fit border-2 border-primary text-primary font-medium text-[16px] leading-6;
  }
  .btn-icon {
    @apply flex items-center justify-center h-[60px] w-[60px] bg-foreground rounded-full;
  }
  .btn-icon img {
    @apply w-6 h-6;
  }
  .circle-person {
    @apply rounded-full h-[60px] w-[60px];
  }
  .companies-logo {
    @apply flex items-center justify-center w-fit h-8;
  }
  .team-container {
    @apply w-[312px] flex flex-col gap-4;
  }
  .team-people {
    @apply flex items-center gap-4 rounded-full pl-3.5 py-3 transition-colors ease-in duration-150;
  }
  .team-people img {
    @apply w-16 h-16 rounded-full;
  }
  .team-people h6 {
    @apply text-xl leading-8 line-clamp-1 -tracking-[0.6px] font-medium;
  }
  .team-people p {
    @apply text-lg leading-[26px] line-clamp-1 text-foreground/60;
  }
  .team-people:hover {
    @apply bg-foreground/10;
  }
  .statistics-container {
    @apply flex w-full items-center gap-[63px];
  }
  .statistics {
    @apply flex flex-col gap-2 w-auto;
  }
  .statistics .count {
    @apply text-7xl font-bold leading-[88px] line-clamp-1 tracking-tight text-[#1560F2];
  }
  .statistics .description {
    @apply text-foreground/60 line-clamp-1 leading-[26px] text-lg;
  }
  .statistics img {
    @apply w-8 h-8;
  }
}

